feat: Configuración para despliegue en IIS y correcciones de assets

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="loading" class="loading-container d-flex justify-content-center">
-    <img src="./assets/loading.gif" class="align-self-center" />
+    <img src="/trazabilidad-app/assets/loading.gif" class="align-self-center" />
 </div>
 <div class="container page-container">
     <div class="body">
