--- a/src/app/modules/tracking/tracking-view/purchase-summary/purchase-summary.component.html
+++ b/src/app/modules/tracking/tracking-view/purchase-summary/purchase-summary.component.html
@@ -2,7 +2,7 @@
   <h3 class="title">Resumen de tu compra</h3>
   <div class="content-row">
     <div class="icon-col">
-      <div class="circle"><img [src]="tipoEntrega === 'Retiro en tienda' ? 'assets/tienda-icon.svg' : 'assets/domicilio-icon.svg'" alt="Entrega" /></div>
+      <div class="circle"><img [src]="tipoEntrega === 'Retiro en tienda' ? '/trazabilidad-app/assets/tienda-icon.svg' : '/trazabilidad-app/assets/domicilio-icon.svg'" alt="Entrega" /></div>
     </div>
     <div class="text-col">
       <div class="line tipo">{{ tipoEntrega }}</div>
