correccion entrega a domicilio

--- a/src/app/modules/tracking/tracking-hint-modal/tracking-hint-modal.template.html
+++ b/src/app/modules/tracking/tracking-hint-modal/tracking-hint-modal.template.html
@@ -5,7 +5,7 @@
 <mat-dialog-content class="mat-typography">
     <p class="common-subtitle">El número de Boleta o Factura consta de 8 dígitos. Puedes encontrarlo en la esquina superior derecha de tu documento.</p>
     <div class="text-center">
-        <img class="hint-img" src="/trazabilidad-app/assets/ayuda_boleta.svg">
+        <img class="hint-img" src="assets/ayuda_boleta.svg">
     </div>
 
 </mat-dialog-content>
